Fix spacing at bottom of page

--- a/style.css
+++ b/style.css
@@ -39,16 +39,8 @@ hr.divider {
 .pane {
     background-color: rgba(0,0,0,0.2);
     border-radius: 5px;
-    margin-bottom: 0;
+    margin: 3em 0 0;
     padding: 0.5em;
-}
-
-.pane.top {
-    margin: 3em 0 6em;
-}
-
-.row.top {
-    margin-top: 5em;
 }
 
 .subtitle {
